--- a/Backend 4(REST)/03_Create a new route/views/index.ejs
+++ b/Backend 4(REST)/03_Create a new route/views/index.ejs
@@ -21,6 +21,10 @@
         </div>
 
         <% } %>
+            <br>
+            <br>
+            <button><a style="text-decoration: none;" href="http://localhost:3000/posts/new">Create a new
+                    post</a></button>
 </body>
 
 </html>
