--- a/Backend 3(EJS)/views/home.ejs
+++ b/Backend 3(EJS)/views/home.ejs
@@ -9,7 +9,7 @@
 
 <body>
     <h1>This is the Home Page</h1>
-    <p>
+    <p style="color: blue;">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eligendi fuga deserunt?
         Quisquam, voluptatum. Quisquam, voluptatum. Quisquam, voluptatum. Quisquam, voluptatum.
         Quisquam, voluptatum. Quisquam, voluptatum. Quisquam, voluptatum. Quisquam, voluptatum.
